Prevent advanced search ranges from wrapping on small screens

--- a/opentreemap/treemap/css/sass/partials/_subheader.scss
+++ b/opentreemap/treemap/css/sass/partials/_subheader.scss
@@ -82,6 +82,17 @@
                     }
                 }
             }
+            @media(max-width: 767px){
+                .input-group {
+                    width: 75px;
+                    input[type="text"] {
+                        width: 55px;
+                    }
+                }
+                input[type="text"] {
+                    width: 85px;
+                }
+            }
         }
         .input-group {
             width: 120px;
